update version and pkg

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mime-types": "2.1.11",
     "moment": "^2.15.1",
     "nedb": "^1.8.0",
-    "node-easy-cert": "^1.0.0",
+    "node-easy-cert-fix": "^1.0.0",
     "pug": "^2.0.0-beta6",
     "qrcode-npm": "0.0.3",
     "request": "^2.74.0",
